--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <link
+rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+/>
+
+<link
+rel="stylesheet"
+href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Courgette&display=swap"
+/>
+
+
+    <title>Shopping Cart</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
